--- a/html-feladatok-bemutatkozo/css/index.css
+++ b/html-feladatok-bemutatkozo/css/index.css
@@ -21,6 +21,7 @@ header {
 header nav {
     display: flex;
     justify-content: center;
+    background-color: rgba(0, 0, 0, .2);
 }
 
 header nav ul {
@@ -49,4 +50,181 @@ header nav ul li a:hover {
     text-decoration: underline;
     padding: 2px 10px 13px 10px;
 
+}
+
+header h1 {
+    color: aliceblue;
+    font-size: 3rem;
+    margin: 30px 20px;
+    text-align: left;
+}
+
+main section.debut {
+    display: block;
+    margin: 20px;
+}
+
+main section.debut p {
+    font-size: 1.3rem;
+    line-height: 1.5rem;
+    margin: 20px 0;
+}
+
+main section.debut .pictures {
+    display: flex;
+}
+
+main section.debut .pictures img {
+    height: 600px;
+    margin: 10px;
+    box-shadow: 3px 2px 15px rgba(0, 0, 0, .5);
+    border-radius: 5px;
+}
+
+main section.content {
+    border: 3px solid rgb(0, 116, 116);
+    border-radius: 15px;
+    margin: 30px 30px;
+
+}
+
+main section.content h2 {
+    color: aliceblue;
+    font-size: 2rem;
+    margin: 30px 20px;
+    text-align: center;
+}
+
+main section.content .skill_boxes {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
+
+main section.content .skill_boxes .box {
+    width: 33.3%;
+    height: 200px;
+    background-color: rgba(255, 255, 255, .4);
+    margin: 20px 30px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, .3);
+    border-radius: 30px;
+    transition: .3s;
+
+}
+
+main section.content .skill_boxes .box:hover {
+    transform: scale(1.1);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, .3);
+}
+
+main section.content .skill_boxes .box h3 {
+    color: aliceblue;
+    font-size: 1.8rem;
+    margin: 30px 20px;
+    text-align: center;
+}
+
+main section.content .skill_boxes .box p {
+    color: aliceblue;
+    font-size: 1.6rem;
+    margin: 30px 20px;
+    text-align: center;
+}
+
+/* footer */
+
+footer {
+    display: flex;
+    flex-direction: column;
+    background-color: darkslategray;
+    margin: 0px 30px;
+    color: aliceblue;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
+footer div.footer {
+    display: flex;
+    margin: 20px 30px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+footer div.footer .social ul {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    margin-top: 10px;
+
+}
+
+footer div.footer .social ul li {
+    padding: 20px;
+    transition: .1s;
+}
+
+footer div.footer .social ul li:hover {
+    transform: translateY(-3px);
+}
+
+footer div.footer .social ul li a {
+    font-size: 2rem;
+    color: aliceblue;
+}
+
+footer div.footer .links {
+    display: flex;
+    align-items: center;
+}
+
+footer div.footer .links ul {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+}
+
+footer div.footer .links ul li {
+    transition: .1s;
+}
+
+footer div.footer .links ul li:hover {
+    transform: scale(1.1);
+}
+
+footer div.footer .links ul li a {
+    font-size: 1.2rem;
+    color: aliceblue;
+    text-decoration: none;
+    padding: 20px;
+}
+
+footer div.footer .button {
+    display: flex;
+    align-items: center;
+    margin: 0px 20px;
+}
+
+footer div.footer .button a {
+    background: rgba(255, 255, 255, 0.2);
+    padding: 10px;
+    border: 1px solid black;
+    text-decoration: none;
+    font-size: 1.1rem;
+    border-radius: 15px;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
+    color: aliceblue;
+    cursor: pointer;
+}
+
+footer div.footer .button a:hover {
+    transform: translate(1px, 1px);
+
+}
+
+footer .copyright {
+    text-align: center;
+    font-size: 1.1rem;
+    background-color: rgba(0, 0, 0, .4);
+    padding: 10px;
 }
