--- a/html-feladatok-bemutatkozo/css/gallery.css
+++ b/html-feladatok-bemutatkozo/css/gallery.css
@@ -76,11 +76,12 @@ section {
         ". . .";
 
 }
+
 section img {
     width: 430px;
     height: 350px;
     justify-self: center;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0,.8);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, .8);
 }
 
 /* footer */
@@ -178,4 +179,62 @@ footer .copyright {
     font-size: 1.1rem;
     background-color: rgba(0, 0, 0, .4);
     padding: 10px;
+}
+
+@media screen and (max-width: 425px) {
+
+    header nav ul {
+        display: flex;
+        list-style: none;
+        flex-direction: column;
+        align-items: center;
+        margin: 5px;
+    }
+
+    header nav ul li {
+        margin: 5px 0px;
+    }
+
+    header nav ul li a {
+        display: inline;
+        font-size: 1.1rem;
+    }
+
+    header h1 {
+        color: aliceblue;
+        font-size: 1.8rem;
+        margin: 20px 0px;
+        text-align: center;
+    }
+
+    section {
+        display: block;
+    }
+
+    section img {
+        width: 380px;
+        display: block;
+        margin: 10px auto;
+        height: auto;
+    }
+
+    footer {
+        margin: 0;
+    }
+
+    footer div.footer {
+        display: flex;
+        margin: 0px;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    footer .copyright {
+        font-size: 1rem;
+    }
+
+    footer div.footer .button {
+        margin: 10px 20px;
+    }
 }
