--- a/html-feladatok-bemutatkozo/css/works.css
+++ b/html-feladatok-bemutatkozo/css/works.css
@@ -58,6 +58,7 @@ header h1 {
     margin: 30px 20px;
     text-align: left;
 }
+
 main .wrapper {
     display: block;
     margin: 0 20px;
@@ -184,4 +185,77 @@ footer .copyright {
     font-size: 1.1rem;
     background-color: rgba(0, 0, 0, .4);
     padding: 10px;
+}
+
+@media screen and (max-width: 425px) {
+
+    header nav ul {
+        display: flex;
+        list-style: none;
+        flex-direction: column;
+        align-items: center;
+        margin: 5px;
+    }
+
+    header nav ul li {
+        margin: 5px 0px;
+    }
+
+    header nav ul li a {
+        display: inline;
+        font-size: 1.1rem;
+    }
+
+    header h1 {
+        color: aliceblue;
+        font-size: 1.8rem;
+        margin: 20px 0px;
+        text-align: center;
+    }
+
+    main .wrapper {
+        margin: 30px 10px;
+    }
+
+    main .wrapper section.works {
+        display: block;
+        margin: 0;
+    }
+
+    main .wrapper section.works img {
+        display: block;
+        margin: auto;
+    }
+
+    main .wrapper section.works div.content h3 {
+        font-size: 1.5rem;
+        text-align: center;
+        margin: 10px 0;
+    }
+
+    main .wrapper section.works div.content p {
+        font-size: 1rem;
+        line-height: 1.4rem;
+        margin: 20px;
+    }
+
+    footer {
+        margin: 0;
+    }
+
+    footer div.footer {
+        display: flex;
+        margin: 0px;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    footer .copyright {
+        font-size: 1rem;
+    }
+
+    footer div.footer .button {
+        margin: 10px 20px;
+    }
 }
