--- a/css-feladatok-admin/CSS/style.css
+++ b/css-feladatok-admin/CSS/style.css
@@ -20,6 +20,13 @@
     font-size: 1.25rem;
     padding: 0px 20px;
     font-weight: 500;
+
+}
+
+.header__title i {
+    position: absolute;
+    left: calc(150px + 10%);
+    top: 20px;
 }
 
 .header__search {
@@ -48,12 +55,14 @@
     padding: 0.375rem 0.75rem;
     font-size: 1.2rem;
     transition: .15s;
-    border: none;
+    border: 2px solid rgb(51, 57, 64);
+    border-right: rgb(0, 123, 255);
 
 }
 
 .search__input:focus {
-    border-color: rgb(128, 189, 255);
+    /*border: 3px solid rgb(128, 189, 255);*/
+border: 2px solid rgb(128, 189, 255);
 }
 
 .search__btn {
@@ -127,18 +136,31 @@
 
 }
 
+
 .card__top {
     padding: 2rem 2rem;
     border-top-right-radius: .25rem;
     border-top-left-radius: .25rem;
+    transition: .3s;
 }
+
+
 
 .card__bottom {
     border-bottom-right-radius: .25rem;
     border-bottom-left-radius: .25rem;
     padding: 1rem 2rem;
     border-top: 1px solid rgba(0, 0, 0, .1);
-    box-shadow: 0px 1px 2px inset rgba(0, 0, 0, .1)
+    box-shadow: 0px 1px 2px inset rgba(0, 0, 0, .1);
+    transition: .3s;
+}
+
+.main__card:hover .card__top {
+    background-color: rgba(0, 0, 0, .2);
+}
+
+.main__card:hover .card__bottom {
+    background-color: rgba(0, 0, 0, .2);
 }
 
 .main__card--blue {
@@ -178,5 +200,35 @@ header h3 i {
 .content h1 {
     font-size: 3rem;
     padding: 2rem 1rem 0rem 1rem;
+}
 
+@media only screen and (max-width: 700px) {
+    .main__cards {
+        margin: 1rem 0rem;
+        flex-direction: column;
+    }
+
+    .main__card {
+        width: 94%;
+    }
+
+    aside {
+        flex-grow: 1;
+    }
+
+    .nav__ul li.headers {
+        margin: 0;
+        padding: 0;
+    }
+
+    .nav__ul li {
+        visibility: hidden;
+        margin: 0;
+        padding: 10px 0;
+    }
+
+    .nav__ul li i {
+        visibility: visible;
+        font-size: 2rem;
+    }
 }
